@@ -1,3 +1,7 @@
+2007/11/03
+	5. Correct a bug in CkwsPlusDirectPath. the fonction init is never called so the initialisation of attUend is made in 
+	   extractFrom and extractTo
+
 2007/10/22
 	4. Added a class to test whether a configuration constraint is continuous and is a projection.	
 2007/10/17
